# webgpu-thingy

./: .gitignore  CMakeLists.txt  README.md
resources/: shader.wgsl
src/: main.cc  utils.cc  utils.h  vertex_buffer.cc
